--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/assets/avatar-light.png"
+          src="./assets/avatar-light.png"
           alt="Foto do Rodrigo com um leve sorriso, com camisa vermelha em uma cachoeira."
         />
         <p>@rodrigo_fmc</p>
