--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
         </a>
       </div>
       <footer>
-        Feito por
+        <address>
+          Feito por
         <a href="https://www.instagram.com/rodrigo_fmc/" target="_blank"
           >Rodrigo Souza</a
         >
+        </address>
       </footer>
     </div>
 
